--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "dat.gui": "^0.7.9",
+    "gsap": "^3.12.1",
     "rxjs": "~7.8.0",
     "three": "^0.153.0",
     "tslib": "^2.3.0",
@@ -31,6 +33,7 @@
     "@angular/compiler-cli": "^15.2.0",
     "@types/jasmine": "~4.3.0",
     "@types/three": "^0.152.1",
+    "@types/dat.gui": "^0.7.10",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
